@@ -135,8 +135,8 @@ is timeout in <i> micro</i>seconds (1000000us is 1sec!),
 default 0 (no delay). Simple rate-limiting!]</li>
 <li>$MainMsgQueueDiscardMark &lt;number&gt; [default
 9750]</li>
-<li>$MainMsgQueueDiscardSeverity &lt;number&gt;
-[*numerical* severity! default 4 (warning)]</li>
+<li>$MainMsgQueueDiscardSeverity &lt;severity&gt;
+[either a textual or numerical severity! default 4 (warning)]</li>
 <li>$MainMsgQueueFileName &lt;name&gt;</li>
 <li>$MainMsgQueueHighWaterMark &lt;number&gt; [default
 8000]</li>
